--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <title>罗山县高级中学</title>
 </head>
 <body>
+<form id="myForm">
+  <input type="text" name="name" placeholder="Name">
+  <input type="email" name="email" placeholder="Email">
+  <input type="submit" value="Submit">
+</form>
 <p>lsgz</p>
 </body>
 </html>
