--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <input type="email" name="email" placeholder="Email">
   <input type="submit" value="Submit">
 </form>
-<p>lsgz</p>
+<p>lsgz0</p>
 </body>
 </html>
