--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <title>罗山县高级中学</title>
 </head>
 <body>
+<center><h1>走读证办理申请表</h1></center>
+<center>
 <form id="myForm">
   <input type="text" name="name" placeholder="Name">
   <br>
   <input type="email" name="email" placeholder="Email">
+  <br>
   <input type="submit" value="Submit">
 </form>
 <p>lsgz0</p>
+</center>
 </body>
 </html>
