--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <center><h1>走读证办理申请表</h1></center>
 <center>
 <form id="myForm">
-  <input type="text" name="name" placeholder="Name">
+  <p><input type="text" name="name" placeholder="Name"></p>
   <br>
-  <input type="email" name="email" placeholder="Email">
+  <p><input type="email" name="email" placeholder="Email"></p>
   <br>
-  <input type="submit" value="Submit">
+  <p><input type="submit" value="提交申请"></p>
 </form>
 <p>lsgz0</p>
 </center>
