--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>罗山县高级中学</title>
 </head>
 <body>
-<center><h1>走读证办理申请表</h1></center>
+<center><h1><p>走读证办理申请表</p></h1></center>
 <center>
 <form id="myForm">
-  <p><input type="text" name="name" placeholder="Name"></p>
+  <p>学生姓名<input type="text" name="name" placeholder="Name"></p>
   <br>
-  <p><input type="email" name="email" placeholder="Email"></p>
+  <p>家长姓名<input type="text" name="jiazhangname" placeholder="jiazhangname"></p>
   <br>
   <p><input type="submit" value="提交申请"></p>
 </form>
