--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <center><h1><p>走读证办理申请表</p></h1></center>
 <center>
 <form id="myForm">
-  <p>学生姓名<input type="text" name="name" placeholder="Name"></p>
+  <p>学生姓名<input type="text" name="name" placeholder="学生姓名"></p>
   <br>
-  <p>家长姓名<input type="text" name="jiazhangname" placeholder="jiazhangname"></p>
+  <p>家长姓名<input type="text" name="jiazhangname" placeholder="家长姓名"></p>
   <br>
   <p><input type="submit" value="提交申请"></p>
 </form>
